[package]
name = "beefy_lc_demo"
version = "0.1.0"
edition = "2018"
authors = ["Parth Desai <desaiparth08@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beefy-primitives = { path = "../grandpa-bridge-gadget/beefy-primitives"}
sp-core = { path = "../substrate/primitives/core"}
codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
sp-runtime = { path = "../substrate/primitives/runtime" }
mmr-lib = { package = "ckb-merkle-mountain-range", path = "../ckb-merkle-mountain-range" }
sp-trie = { path = "../substrate/primitives/trie" }
rand = { version = "0.8.4"}